ncc/testsuite/positive/struct_ctor.n
struct A
{
  x : int;
  public this (_ : string)
  {
    x = 1
  }
  public static Main () : void
  {
    def f = A;
    System.Console.WriteLine (f ("").x);
    def g = A;
    System.Console.WriteLine (g ().x);
  }
}

/*
BEGIN-OUTPUT
1
0
END-OUTPUT
*/